# ratrac

./: .gitignore  CMakeLists.txt  README.rst  main-clock.cpp  main-full3d.cpp  main-patterns.cpp  main-plane.cpp  main-ratrac.cpp  main-scene.cpp  main-silhouette.cpp  main-tick.cpp
.github/workflows/: CI.yml  c-cpp.yml  macOS-13.yml  macOS-26.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  ubuntu-24.04.yml  ubuntu-26.04.yml
apps/: CMakeLists.txt  ch2-tick.cpp  ch4-clock.cpp  ch7-scene.cpp  ch9-plane.cpp  main-clock.cpp  main-full3d.cpp  main-patterns.cpp  main-plane.cpp  main-scene.cpp  main-silhouette.cpp  main-tick.cpp  pattern-viewer.cpp
benchmark/: CMakeLists.txt  bench-Matrix.cpp  bench-Tuple.cpp  bench-ratrac.cpp  bench-ratrac.h
include/ratrac/: App.h  ArgParse.h  Camera.h  Canvas.h  Color.h  Intersections.h  Light.h  Material.h  Matrice.h  Matrix.h  Patterns.h  ProgressBar.h  Ray.h  Shapes.h  StopWatch.h  Transformable.h  Tuple.h  World.h  ratrac.h
lib/ratrac/: App.cpp  ArgParse.cpp  Camera.cpp  Canvas.cpp  Color.cpp  Intersections.cpp  Light.cpp  Material.cpp  Matrice.cpp  Matrix.cpp  Patterns.cpp  Ray.cpp  Shapes.cpp  Tuple.cpp  World.cpp  ratrac.cpp
test/: CMakeLists.txt  test-App.cpp  test-ArgParse.cpp  test-Camera.cpp  test-Camera.inc.cpp  test-Canvas.cpp  test-Canvas.inc.cpp  test-Color.cpp  test-Color.inc.cpp  test-Intersections.cpp  test-Intersections.inc.cpp  test-Light.cpp  test-Light.inc.cpp  test-Material.cpp  test-Material.inc.cpp  test-Matrice.cpp  test-Matrice.inc.cpp  test-Matrix.cpp  test-Matrix.inc.cpp  test-Patterns.cpp  test-Patterns.inc.cpp  test-ProgressBar.cpp  test-ProgressBar.inc.cpp  test-Ray.cpp  test-Ray.inc.cpp  test-Shapes.cpp  test-Shapes.inc.cpp  test-StopWatch.cpp  test-StopWatch.inc.cpp  test-Tuple.cpp  test-Tuple.inc.cpp  test-World.cpp  test-World.inc.cpp  test-ratrac.cpp
test/googletest-1.13.0/googletest/include/gtest/: gtest-printers.h
